# -----

./: README.md  hermes_codex_claude_code_comparison.md
.mindfs/sessions/: session-list.db
ai-coding-agent-advanced-guides/: 01-overview-and-selection.md  02-codex-advanced.md  03-claude-code-advanced.md  04-commands-workflows-agents.md  05-third-party-api-mcp-gateways.md  06-community-notes.md  07-sources.md  README.md
artifact-hub/: .gitignore  README.md
artifact-hub/backend/: .env.example  alembic.ini  pyproject.toml
artifact-hub/backend/alembic/: env.py
artifact-hub/backend/alembic/versions/: 0001_initial.py
artifact-hub/backend/app/: artifact_kind.py  cli.py  config.py  db.py  errors.py  main.py  models.py  schemas.py  security.py  storage.py
artifact-hub/backend/app/routes/: __init__.py  admin.py  artifacts.py  deps.py  health.py  sessions.py  view.py
artifact-hub/backend/tests/: test_artifact_kind.py  test_security.py  test_storage.py
artifact-hub/frontend/: index.html  package-lock.json  package.json  vite.config.ts
artifact-hub/frontend/src/: main.tsx  styles.css  types.ts
artifact-hub/skills/artifact-publisher/: SKILL.md
dashboard/: .gitignore  README.md  package-lock.json  package.json  server.js
dashboard/config/: services.json
dashboard/public/: app.js  index.html  styles.css
image/: .env.example  README.md  package-lock.json  package.json
image/src/: accessControl.js  admin.js  app.js  assets.js  config.js  openaiProxy.js  requestParser.js  security.js  server.js  store.js  waiters.js
image/test/: proxy.test.js
(+32 files in other folders)
